chore: align presence correctly for xlarge container avatar

--- a/packages/avatar/src/styles.less
+++ b/packages/avatar/src/styles.less
@@ -66,8 +66,8 @@
 // Override for x-large container icon presence positioning slowflake, because x-large presence is
 // shifted away from edge by default.
 .xlarge > .container-avatar + .presence-wrapper {
-  right: 0px;
-  bottom: 0px;
+  right: -@ak-avatar-presence-border-width-xlarge;
+  bottom: -@ak-avatar-presence-border-width-xlarge;
 }
 
 .imgWrapper {
